add click event

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <button>Button one </button>
-        <button>Button two</button>
+    <div class="container">
+        <button class="card">Button one </button>
+        <button class="card">Button two</button>
         <div class="card">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, dolores dolore accusamus culpa expedita quas accusantium consequuntur voluptatem fuga fugit harum unde voluptates nisi vitae cumque doloribus hic, sed distinctio!
@@ -24,6 +24,25 @@
 
         </div>
 
+        <div class="box one">
+           
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box one">
+        </div>
+        <div class="box two">
+        </div>
+        <div class="box one">
+        </div>
+        <div class="box two">
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box three">
+        </div>
+        <div class="box two">
+        </div>
     </div>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
